platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/test_scripts_1-20_valid.platter
flag of a = (x + "hello") > "Hello";
flag of x = 1 * 1 < 3 and up;
flag of x = 1 * 1 < 3 and up; # allowed
flag of x = topiece(y) > x + 1;
table of A = [ piece of a; piece of b; ];
table of Dim = [ piece of w; ];
table of Box = [ Dim of d; ];
table of Item = [ piece of id; ];
table of T = [ piece of v; ];
table of Node = [ piece of v; ];
prepare piece of sum(A of x){
    serve x:a + x:b;
}
start(){
    Box of b = [d = [w = 15;];];
    A of t = [a = 4; b = 6;];
    piece[] of a = [1, 2, 3];
    Item[] of list = [[id=10;], [id=20;]];
    piece of i = 2;
    T of a = [v = 5;], b = [v = 8;];
    Node[] of nodes = [[v=1;], [v=2;], [v=3;]];
    bill(tochars(size(nodes)));
    repeat(i >= 0){
        bill(tochars(a[i]) + " ");
        i -= 1;
    }
    bill(tochars(b:d:w + 5));
    bill(tochars(sum(t)));
    bill(tochars(list[1]:id));
    bill(tochars(a:v < b:v));
}


